added presets for transformations
